# expense-analyzer

./: .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
docker/: .env.example
docker/api/: Dockerfile
docker/db/docker-entrypoint-initdb.d/: init.sh
expense_analyzer/: alembic.ini  config.py  constants.py  db_base_types.py  main.py
expense_analyzer/alembic/: env.py
expense_analyzer/alembic/versions/: 2023_11_20_1732-53312486e3d3_added_user_table.py  2023_11_22_1535-71b1d42786e8_added_user_table.py  2023_11_22_1742-bcfb32a9b521_added_transaction_currency_and_tag_.py
expense_analyzer/models/: __init__.py  currency.py  tag.py  transaction.py  user.py
expense_analyzer/models/associations/: __init__.py  transaction_tag.py
expense_analyzer/models/mixins/: __init__.py  timestamp.py
expense_analyzer/routers/: dependencies.py  type_annotations.py
expense_analyzer/routers/v1/: currency.py  url_patterns.py
tests/: test_example.py
tests/test_routers/test_v1/: conftest.py  test_currency.py
