[tool.poetry]
name = "expense-analyzer"
version = "0.1.0"
description = ""
authors = ["Anastasia Stepanova <nastasija.stepanova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.104.1"}
alembic = "^1.12.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
docformatter = "^1.7.5"
isort = "^5.12.0"
bandit = "^1.7.5"
autoflake = "^2.2.1"
add-trailing-comma = "^3.1.0"
pylint = {extras = ["spelling"], version = "^3.0.2"}
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
